Update: put scripts into a folder, add popup ui

--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src="popup.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script type="text/javascript" src="/scripts/popup.js"></script>
 </head>
 <body>
-    
+    <div class="container text-center">
+        <button type="button" class="btn btn-primary btn-block">Upload To Chevereto</button>
+        <button type="button" class="btn btn-primary btn-block">Show Upload Queue</button>
+        <button type="button" class="btn btn-primary btn-block">Setting</button>
+    </div>
 </body>
 </html>
