--- a/editor.html
+++ b/editor.html
@@ -86,8 +86,8 @@
                 </div>
 
                 <div class="FilterSetting">
-                    <input type="range" min="0" max="10" step="0.1" value="1" data-filter="gamma">
-                    <span class="FilterValue">1</span>
+                    <input type="range" min="0" max="10" step="0.1" value="0" data-filter="gamma">
+                    <span class="FilterValue">0</span>
                 </div>
             </div>
 
@@ -154,6 +154,7 @@
                 <a data-preset="nostalgia" class="btn blue">Nostalgia</a>
                 <a data-preset="hemingway" class="btn blue">Hemingway</a>
                 <a data-preset="concentrate" class="btn blue">Concentrate</a>
+                <a data-preset="original" class="btn blue">Original Image</a>
             </div>
         </div>
     </div>
