--- a/popup.html
+++ b/popup.html
@@ -2,13 +2,19 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+        html body {
+            max-width: 400px;
+        }
+    </style>
     <script type="text/javascript" src="/scripts/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="/scripts/popup.js"></script>
 </head>
 <body>
     <div class="container text-center">
-        <button type="button" class="btn btn-primary btn-block my-2">Upload To Chevereto</button>
-        <button type="button" class="btn btn-primary btn-block my-2">Show Upload Queue</button>
+        <button type="button" id="uploadToChevereto" class="btn btn-primary btn-block my-2">Upload To Chevereto</button>
+        <button type="button" id="showUploadQueue" class="btn btn-primary btn-block my-2">Show Upload Queue(<span>0</span>)</button>
+        <select style="display:none"></select>
         <a href="/setting.html"><button type="button" class="btn btn-primary btn-block my-2">Setting</button></a>
     </div>
 </body>
